--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body{
     flex: 1;
     height: 600px;
     width: 400px;
-    border: 2px solid;
+    padding: 20px;
+    
 }
 
 #display{
@@ -22,6 +23,7 @@ body{
     border: 1px green solid;
     height: 90px;
     padding: 10px;
+    border-radius: 10px;
 }
 
 .key-row{
@@ -41,4 +43,5 @@ body{
     background-color: lightgrey;
     color:black;
     font-weight:900;
+    border-radius: 10px;
 }
